tests/type-errors/duplicate_name_arg_contract.arl
archetype duplicate_name_arg_contract

contract my_contract {
  entry f (i : int, i : int)
}

entry exec () {
  effect {
    ()
  }
}
